assets/css/home/newarrivals2Section.css
.newArrivals2 {
  margin-top: 40px;

  display: flex;
  flex-direction: column;
  justify-content: center;

  .title {
    font-size: 0.95rem;
    text-align: left;
    border-bottom: 2px solid var(--sec-bg-clr);
    width: 110px;
    margin-left: 10px;
    font-weight: 500;
  }
  .content {
    margin: 15px;
    min-height: 37vw;
    display: flex;
    font-size: 1.5rem;
    gap: 10px;
    .card {
      font-family: var(--main-font);
      position: relative;
      height: 100%;
      background-color: var(--nav-bg);
      min-width: 26vw;
      padding: 15px;
      display: flex;
      flex-direction: column;
      img {
        width: 100%;
        aspect-ratio: 1;
        object-fit: cover;
        flex-shrink: 0;
      }
      .info {
        flex: 1;
        display: flex;
        flex-direction: column;
        gap: 5px;

        .name {
          font-size: 1.1rem;
          font-weight: bold;
          color: var(--sec-bg-clr);
        }
        .cName {
          font-size: 0.9rem;
          opacity: 0.9;
        }
        .price {
          font-size: 0.9rem;
          font-weight: bold;
        }
        .hue {
          margin-top: 10px;
          width: 2vw;
          height: 2vw;
          cursor: pointer;
          border-radius: 50%;
          border: 1px solid var(--sec-bg-clr);
          box-shadow: inset 0 0 0 2px rgb(255, 255, 255);
        }
      }

      .badge {
        height: 25px;
        padding-inline: 10px;
        border-radius: 40px;
        font-size: 0.7rem;
        background-color: var(--badge-bg-clr);
        text-align: center;
        align-content: center;
        font-weight: bold;
        color: var(--sec-bg-clr);
        position: absolute;
        top: 1;
        left: 1;
      }
    }
  }
  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    .arrows {
      padding-right: 20px;
      display: flex;
      gap: 10px;
      div {
        width: 40px;
        height: 40px;
        text-align: center;
        align-content: center;
        border-radius: 50%;
        border: 1px solid var(--sec-bg-clr);
        color: var(--sec-bg-clr);
        transition: all 0.2s ease-in-out;
        font-size: 1.2rem;
        cursor: pointer;
      }
      div:hover {
        background-color: var(--sec-bg-clr);
        color: var(--main-bg-clr);
      }
    }
  }
}

